# facebook-prediction

./: .gitignore  README.md  my.csv  requirements.txt  setup.cfg  tox.ini
cli/: main.py
go/: Dockerfile  main.go
repnup/: actions.py
repnup/tests/: inputs.py  test_actions.py
