[metadata]
name = facebook-prediction
summary = Facebook API tool to predict user signup date
description-file =
    README.md
author = Denis Makogon
author-email = lildee1991@gmail.com
home-page = https://github.com/denismakogon/facebook-prediction
classifier =
    Environment :: Linux
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.5

[files]
packages =
    repnup
    cli

[entry_points]
console_scripts =
    facebook-prediction = cli.main:facebook

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
